--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 checkpoints/** filter=lfs diff=lfs merge=lfs -text
 checkpoints_final*/** filter=lfs diff=lfs merge=lfs -text
 checkpoints_segmentation/** filter=lfs diff=lfs merge=lfs -text
-checkpoints_v2/** filter=lfs diff=lfs merge=lfs -text
+checkpoints_definitive/** filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+checkpoints_v2/** filter=lfs diff=lfs merge=lfs -text
