--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_ADDRESS="dermai.project1@gmail.com"
-EMAIL_PASSWORD="hgax yapq qovk sppx"
+EMAIL_ADDRESS="sender email"
+EMAIL_PASSWORD="app password"
